Initial commit with all files