@@ -29,30 +29,25 @@ public class MovieService {
     public MovieService(ImageService imageService,
                         MovieRepository movieRepository,
                         GenreRepository genreRepository,
-                        MovieYearRepository movieYearRepository)
-    {
+                        MovieYearRepository movieYearRepository) {
         this.imageService = imageService;
         this.movieRepository = movieRepository;
         this.genreRepository = genreRepository;
         this.movieYearRepository = movieYearRepository;
     }
 
-
     // Get All Movies
     public List<MovieDto> getAllMovies() {
-        //List<Movie> movieList = this.movieRepository.findRandomMovie();
-
         return movieRepository.findAll().stream().map(MovieDto::convert).collect(Collectors.toList());
     }
 
-    public List<MovieDto> getMoviesByTypes(String type){
+    public List<MovieDto> getMoviesByTypes(String type) {
         boolean control;
-        if(type.equals("movies"))
-            control=true;
+        if (type.equals("movies"))
+            control = true;
         else if (type.equals("series")) {
-            control=false;
-        }
-        else {
+            control = false;
+        } else {
             return this.movieRepository.findAll()
                     .stream().map(MovieDto::convert).toList();
         }
@@ -60,34 +55,36 @@ public class MovieService {
                 .stream().map(MovieDto::convert).toList();
     }
 
-    //Get Movie By Genre ID
-    public List<MovieDto> getAllMoviesByGenreId(Integer id){
+    // Get Movie By Genre ID
+    public List<MovieDto> getAllMoviesByGenreId(Integer id) {
         this.genreRepository.findById(id)
-                .orElseThrow( ()-> new ResourceNotFoundException("Genre is  not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Genre is not found"));
         return this.movieRepository.findMovieByGenresId(id)
                 .stream().map(MovieDto::convert).collect(Collectors.toList());
     }
 
-    //Get Movies By Genre
+    // Get Movies By Genre
     public List<MovieDto> getAllMoviesByGenre(String genre) {
         return this.movieRepository.findMovieByGenresGenre(genre)
                 .stream()
                 .map(MovieDto::convert)
-                .toList();
+                .collect(Collectors.toList());
     }
+
     // Get Movie By ID
-    public MovieDto getMovieById(Long id){
+    public MovieDto getMovieById(Long id) {
         return MovieDto.convert(this.findMovieByID(id));
     }
 
     public MovieDto getRandomOneMovie(String type) {
-        int control=0;
-        if(type.equals("movies"))
-            control=1;
+        int control = 0;
+        if (type.equals("movies"))
+            control = 1;
         return MovieDto.convert(this.movieRepository.findRandomOneMovie(control));
     }
+
     // Create Movie
-    public MovieDto createMovie(MovieRequest request){
+    public MovieDto createMovie(MovieRequest request) {
         Movie movie = new Movie(
                 request.getTitle(),
                 request.getDescription(),
@@ -101,9 +98,9 @@ public class MovieService {
         Movie savedOne = this.movieRepository.save(movie);
         return MovieDto.convert(savedOne);
     }
-    //Update  Movie
 
-    public MovieDto updateMovie(Long id, MovieUpdateRequest request){
+    // Update Movie
+    public MovieDto updateMovie(Long id, MovieUpdateRequest request) {
         Movie movie = this.findMovieByID(id);
         Movie updateMovie = new Movie(
                 movie.getId(),
@@ -113,66 +110,70 @@ public class MovieService {
                 request.getTrailer(),
                 request.getMovieUrl(),
                 findMovieYearByYear(request.getYear()),
-                request.isMovie()
+                request.isMovie(),
+                movie.getGenres(), // Add existing genres
+                movie.getUsers(), // Add existing users
+                movie.getLists() // Add existing lists
         );
 
-        Objects.requireNonNull(updateMovie.getGenres()).removeAll(Objects.requireNonNull(movie.getGenres()).stream().map(a->{
+        Objects.requireNonNull(updateMovie.getGenres()).removeAll(Objects.requireNonNull(movie.getGenres()).stream().map(a -> {
             Genre genre = this.genreRepository.findByGenre(a.getGenre());
             Objects.requireNonNull(genre.getMovies()).remove(movie);
             return genre;
         }).collect(Collectors.toSet()));
-        this.addMovieToGenre(updateMovie,request.getGenres());
+        this.addMovieToGenre(updateMovie, request.getGenres());
 
         Movie savedOne = this.movieRepository.save(updateMovie);
-        return  MovieDto.convert(savedOne);
+        return MovieDto.convert(savedOne);
     }
 
-    private Movie addMovieToGenre(Movie movie, Set<Genre> genres){
-        movie.getGenres().addAll(genres.stream().map(a->{
+    private Movie addMovieToGenre(Movie movie, Set<Genre> genres) {
+        movie.getGenres().addAll(genres.stream().map(a -> {
             Genre genre = this.genreRepository.findByGenre(a.getGenre());
 
-            if(genre==null)
-                throw new ResourceNotFoundException("Genre could not found => " +genres
-                        .stream().map(Genre::getGenre).toList() );
+            if (genre == null)
+                throw new ResourceNotFoundException("Genre could not found => " + genres
+                        .stream().map(Genre::getGenre).collect(Collectors.toList()));
             genre.getMovies().add(movie);
-            return  genre;
+            return genre;
         }).collect(Collectors.toSet()));
         return movie;
     }
 
-    // DeleteMovie By ID
+    // Delete Movie By ID
     public void deleteMovieById(Long id) {
         Movie movie = this.findMovieByID(id);
-        if(movie.getMovieImage()!=null )
+        if (movie.getMovieImage() != null)
             imageService.deleteFile(movie.getMovieImage());
         this.movieRepository.delete(movie);
     }
 
-    //Search Movies
+    // Search Movies
     public List<MovieDto> searchMovieByKeyword(String keyword) {
         return this.movieRepository.searchMovieByKeyword(keyword).stream()
                 .map(MovieDto::convert).collect(Collectors.toList());
     }
 
     // Find Movie By ID
-    protected Movie findMovieByID(Long id){
+    protected Movie findMovieByID(Long id) {
         return this.movieRepository.findById(id)
-                .orElseThrow( ()-> new ResourceNotFoundException("Movie is  not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Movie is not found"));
     }
 
-    protected MovieYear findMovieYearByYear(Integer year){
+    protected MovieYear findMovieYearByYear(Integer year) {
         return this.movieYearRepository.findByYear(year)
-                .orElseThrow(()-> new ResourceNotFoundException("Year is not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Year is not found"));
     }
+
     public List<MovieDto> getLastFiveMovie() {
         return this.movieRepository.findLastFiveMovie()
                 .stream().map(MovieDto::convert).toList();
     }
 
-    public MovieDto addImageToMovie(Long movieId  , MultipartFile file){
+    public MovieDto addImageToMovie(Long movieId, MultipartFile file) {
         Movie movie = this.findMovieByID(movieId);
-        String fileName=  imageService.uploadFile(file);
-        Movie imgMovie= new Movie(
+        String fileName = imageService.uploadFile(file);
+        Movie imgMovie = new Movie(
                 movie.getId(),
                 movie.getTitle(),
                 movie.getDescription(),
@@ -180,19 +181,17 @@ public class MovieService {
                 movie.getTrailer(),
                 movie.getMovieUrl(),
                 movie.getYear(),
-                movie.isMovie()
+                movie.getIsMovie(),
+                movie.getGenres(), // Add existing genres
+                movie.getUsers(), // Add existing users
+                movie.getLists() // Add existing lists
         );
 
         this.movieRepository.save(imgMovie);
         return MovieDto.convert(imgMovie);
-
     }
 
-    public String imgUpload(MultipartFile file){
+    public String imgUpload(MultipartFile file) {
         return imageService.uploadFile(file);
     }
-
-
-
 }
-
